# server/src/types/auth.types.ts
@@ -1,10 +1,10 @@
 export interface RegisterPayload {
-    name: string,
-    email: string,
-    password: string
+  name: string;
+  email: string;
+  password: string;
 }
 
 export interface LoginPayload {
-    email: string,
-    password: string
+  email: string;
+  password: string;
 }
